# SOIL

./: .gitignore  CMakeLists.txt  SOILConfig.cmake
src/: SOIL.c
test/: CMakeLists.txt  main.cpp
